--- a/test.properties
+++ b/test.properties
@@ -3,9 +3,9 @@ spring.profiles.active=test1
 ---
 spring.profiles=test1
 server.port=8282
-spring.application.name=name-8281
+spring.application.name=test
 
 ---
 spring.profiles=test2
 server.port=8383
-spring.application.name=name-8383
+spring.application.name=test
